Issue #11024 - Created new widget.

--- a/config/sync/block_content.type.faceted_taxonomy.yml
+++ b/config/sync/block_content.type.faceted_taxonomy.yml
@@ -1,8 +1,8 @@
-uuid: c5542e34-d8f8-4da0-b79b-6adf928b8fb3
+uuid: cbbdd15a-d8f6-4921-8e0b-3cbe38cd4061
 langcode: en
 status: true
 dependencies: {  }
-id: faceted_taxonomy_widget
-label: 'Faceted Taxonomy Widget'
+id: faceted_taxonomy
+label: 'Faceted Taxonomy'
 revision: 1
 description: 'The Faceted Taxonomy widget allows for taxonomies to be handled as Facets.'
