--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -104,6 +104,7 @@ module:
   migrate_file: 0
   migrate_plus: 0
   migrate_source_csv: 0
+  migrate_source_ical: 0
   migrate_tools: 0
   node: 0
   node_revision_delete: 0
