--- a/profile/modules/cp/modules/cp_import/cp_import.routing.yml
+++ b/profile/modules/cp/modules/cp_import/cp_import.routing.yml
@@ -5,3 +5,10 @@ cp_import.content.download_template:
     _title: 'Download Template'
   requirements:
     _custom_access: '\Drupal\cp_import\Access\CpImportAccessCheck::access'
+cp_import.content.download_ical:
+  path: '/cp/content/import/{app_name}/template-ical'
+  defaults:
+    _controller: '\Drupal\cp_import\Controller\CpImportController::downloadIcalTemplate'
+    _title: 'Download Template'
+  requirements:
+    _custom_access: '\Drupal\cp_import\Access\CpImportAccessCheck::access'
