--- a/profile/modules/cp/modules/cp_import/cp_import.services.yml
+++ b/profile/modules/cp/modules/cp_import/cp_import.services.yml
@@ -12,7 +12,7 @@ services:
     arguments: ['@vsite.context_manager', '@entity_type.manager', '@plugin.manager.bibcite_format', '@serializer', '@config.factory', '@logger.factory']
   app_import_factory:
     class: 'Drupal\cp_import\AppImportFactory'
-    arguments: ['@cp_import.helper', '@vsite.alias_storage', '@language_manager']
+    arguments: ['@cp_import.helper', '@vsite.path_alias.repository', '@language_manager']
   cp_import_access.check:
     class: '\Drupal\cp_import\Access\CpImportAccessCheck'
     arguments: ['@os_app_access.app_access', '@vsite.app.manager', '@entity_type.manager']
