--- a/config/sync/field.storage.block_content.field_select_vocabularies.yml
+++ b/config/sync/field.storage.block_content.field_select_vocabularies.yml
@@ -10,7 +10,10 @@ field_name: field_select_vocabularies
 entity_type: block_content
 type: list_string
 settings:
-  allowed_values: {  }
+  allowed_values:
+    -
+      value: none
+      label: '-None-'
   allowed_values_function: ''
 module: options
 locked: false
