--- a/config/sync/field.field.block_content.faceted_taxonomy.field_vocabularies.yml
+++ b/config/sync/field.field.block_content.faceted_taxonomy.field_vocabularies.yml
@@ -1,20 +1,20 @@
-uuid: bb4474b8-5e7e-4280-bb7b-d18a3bf54a37
+uuid: 58fa5b2a-c01b-4f2d-bc0d-80f88d4ee6fe
 langcode: en
 status: true
 dependencies:
   config:
     - block_content.type.faceted_taxonomy
-    - field.storage.block_content.field_select_vocabularies
+    - field.storage.block_content.field_vocabularies
   module:
     - options
-id: block_content.faceted_taxonomy.field_select_vocabularies
-field_name: field_select_vocabularies
+id: block_content.faceted_taxonomy.field_vocabularies
+field_name: field_vocabularies
 entity_type: block_content
 bundle: faceted_taxonomy
 label: 'Select vocabularies'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
