--- a/config/sync/field.storage.block_content.field_vocabularies.yml
+++ b/config/sync/field.storage.block_content.field_vocabularies.yml
@@ -1,19 +1,16 @@
-uuid: 270129a9-b613-478f-8046-eb38c9acc8df
+uuid: 0c0c3a96-f03a-4b6b-bdd7-377768fade10
 langcode: en
 status: true
 dependencies:
   module:
     - block_content
     - options
-id: block_content.field_select_vocabularies
-field_name: field_select_vocabularies
+id: block_content.field_vocabularies
+field_name: field_vocabularies
 entity_type: block_content
 type: list_string
 settings:
-  allowed_values:
-    -
-      value: none
-      label: '-None-'
+  allowed_values: {  }
   allowed_values_function: ''
 module: options
 locked: false
