Issue #11024 - Added default value and resolved issue for the no filters found.

--- a/config/sync/field.storage.block_content.field_vocabularies.yml
+++ b/config/sync/field.storage.block_content.field_vocabularies.yml
@@ -11,7 +11,7 @@ entity_type: block_content
 type: list_string
 settings:
   allowed_values: {  }
-  allowed_values_function: ''
+  allowed_values_function: 'os_search_get_vocab_list'
 module: options
 locked: false
 cardinality: -1
