Issue #12674 - widget changes (#13134)
* Issue #12674 - Section navigation block type created.

* Issue #12674 - Removed body field from block.

* Issue #12674 - Section outline form and hiding book traversal links.

* Issue #12674 - Tests added.

* Issue #12674 - Section outline form AJAx changes.

* Issue #12674 - Section outline form changes.

* Issue #12674 - Section outline - moving to other books code changes.

* Issue #12674 - Section outline form ajax tests and PR comments.

* Issue #12674 - Updated changes for other-book-form.

* Issue #12674 - Corrected book navigation block.

* Issue #12674 - Hiding section nav block code changes added.

* Issue #12674 - Parent and child nodes update upon selection.

* Issue #12674 - Book navigation block altered.

* Issue #12674 - Section navigation block build.

* Issue #12674 - Section navigation block added and attached to book pages.

* Issue #12674 - Code beautification.

* Issue #12674 - Modified code to get all the child nodes.

* Issue #12674 - Added filter to hide nodes with hidden_section_nav field enabled.

* Issue #12674 - Widget title field added for section navigation widget.

* Issue #12674 - ui for book nav

* Issue #12674 - Added checks for no vsite book warnings.

* Issue #12674 - Tests added and PR feedback addressed.

* Issue #12674 - code for active link

* Issue #12674 - code for active link

* Issue #12674 - Hide navigation widget on book main page.

* Issue #12674 - Section outline contextual links added.

* Issue #12674 - Issue #13020 - Added ignore list.

* Issue #12674 - Hid section_navigation widget in layout section.

* Issue #12674 - Removed unnecessary vsite manager from booksHelper.

* Issue #12674 - New tests added.

* Issue #12674 - Section outline contextual links tests added.

* Issue #12674 - Layout section navigation tests.

* Issue #12674 - Added tests for standalone pages.

* Issue #12674 - Tests to check same block 

--- a/config/sync/core.entity_view_display.block_content.section_navigation.default.yml
+++ b/config/sync/core.entity_view_display.block_content.section_navigation.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - block_content.type.section_navigation
+    - field.field.block_content.section_navigation.field_book_reference
     - field.field.block_content.section_navigation.field_widget_title
 id: block_content.section_navigation.default
 targetEntityType: block_content
@@ -19,5 +20,6 @@ content:
     type: string
     region: content
 hidden:
+  field_book_reference: true
   langcode: true
   search_api_excerpt: true
