--- a/config/sync/core.entity_form_display.block_content.section_navigation.default.yml
+++ b/config/sync/core.entity_form_display.block_content.section_navigation.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - block_content.type.section_navigation
+    - field.field.block_content.section_navigation.field_book_reference
     - field.field.block_content.section_navigation.field_widget_title
   module:
     - field_layout
@@ -18,7 +19,7 @@ bundle: section_navigation
 mode: default
 content:
   field_widget_title:
-    weight: 26
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -27,7 +28,7 @@ content:
     region: content
   info:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -35,9 +36,10 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_book_reference: true
