Issue #12993 - outline issue bug (#13147)
* Issue #12993 - Hide outline tab for non-book pages.

* Issue #12993 - Custom access added for book outline.

* Issue #12993 - Kernel tests added.

* Issue #12993 - Updated code and tests.

* Issue #12993 - Reverted testcase.

* Issue #12993 - More assertions added.

* Issue #12993 - Corrected tests.

Co-authored-by: Richard Brandon <rbran100@users.noreply.github.com>

--- a/profile/modules/apps/os_pages/os_pages.routing.yml
+++ b/profile/modules/apps/os_pages/os_pages.routing.yml
@@ -5,6 +5,7 @@ os_pages.book_outline:
     _title: 'Outline'
   requirements:
     _group_permission: 'administer book outlines'
+    _outline_access_check: 'TRUE'
     _entity_access: 'node.view'
     node: \d+
   options:
