13040 filter news by year (#13124)
* Issue #13040 - View related changes for Filter By Year widget.

* Issue #13040 - Viewfield module and block content type.

* Issue #13040 - Aggregation issue fix.

* Issue #13040 - Finally a setting that aggregates correctly.

* Issue #13105 - 13105-support-default-content-new-vsites

* Issue #13105 - adds-default-content-dir

* Issue #13105 - adds support for default blocks

* Issue #13105 - code cleaup

* Issue #13040 - Block edit delete permissions

* Issue #13040 - Widget csv added

* Issue #13105 - changes in getCreateFilePaths

* Issue #13040 - Tests for everything.

* Issue #13040 - Comment correction.

* Issue #13040 - Test fix.

* Issue #13040 - PR feedback changes.

* Issue #13040 - Changes to hide the widget.

* Issue #13040 - Super admin test fix.

Co-authored-by: uttkarsh@axelerant.com <uttkarsh@axelerant.com>
Co-authored-by: Lomas Rishi Gupta <lomasgupta35@gmail.com>
Co-authored-by: Richard Brandon <rbran100@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -238,6 +238,7 @@
         "drupal/twig_extensions": "^2.0",
         "drupal/twig_tweak": "^2.4",
         "drupal/video_embed_field": "^2.0",
+        "drupal/viewfield": "^3.0",
         "drupal/views_accordion": "^1.1",
         "drupal/views_ical": "^2.2",
         "drupal/views_infinite_scroll": "^1.5",
