--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -186,6 +186,7 @@ module:
   veoa: 0
   video_embed_field: 0
   video_embed_media: 0
+  viewfield: 0
   views_accordion: 0
   views_advanced_routing: 0
   views_ical: 0
