Issue #11024 - Hide the field to get displayed.

--- a/config/sync/core.entity_view_display.block_content.faceted_taxonomy.default.yml
+++ b/config/sync/core.entity_view_display.block_content.faceted_taxonomy.default.yml
@@ -11,20 +11,11 @@ dependencies:
     - field.field.block_content.faceted_taxonomy.field_vocabularies
     - field.field.block_content.faceted_taxonomy.field_vocabulary_order
     - field.field.block_content.faceted_taxonomy.field_widget_title
-  module:
-    - options
 id: block_content.faceted_taxonomy.default
 targetEntityType: block_content
 bundle: faceted_taxonomy
 mode: default
 content:
-  field_vocabularies:
-    weight: 6
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
   field_widget_title:
     weight: 4
     label: above
@@ -38,6 +29,7 @@ hidden:
   field_display_styles: true
   field_show_number_of_posts: true
   field_term_order: true
+  field_vocabularies: true
   field_vocabulary_order: true
   langcode: true
   search_api_excerpt: true
