--- a/composer.json
+++ b/composer.json
@@ -203,6 +203,7 @@
         "drupal/group_purl": "^1.0-alpha1",
         "drupal/groupmenu": "^1.0-beta4",
         "drupal/image_widget_crop": "^2.2",
+        "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key_value_field": "^1.0",
         "drupal/mail_login": "^1.0",
         "drupal/mailchimp": "^1.8",
