--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -82,6 +82,7 @@ module:
   hal: 0
   image: 0
   image_widget_crop: 0
+  inline_entity_form: 0
   inline_form_errors: 0
   key_value_field: 0
   language: 0
